load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/mjhd-devlion/bazel-spanner-bug
# gazelle:proto disable_global

gazelle(
    name = "gazelle",
    command = "fix",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mjhd-devlion/bazel-spanner-bug",
    visibility = ["//visibility:private"],
    deps = ["//vendor/cloud.google.com/go/spanner:go_default_library"],
)

go_binary(
    name = "repro",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
